[package]
name = "pumpkin_project_maps"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/VladTheJunior/pumpkin_project_maps"


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"